Add load test for maimai/chunithm